--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "author": "Sam Okasha",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.317.0",
     "body-parser": "^1.18.3",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.15",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
