--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.15",
+    "multer": "^1.3.1",
+    "multer-s3": "^2.7.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
