--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Sam Okasha",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^3.1.1",
     "aws-sdk": "^2.317.0",
     "body-parser": "^1.18.3",
     "cookie-session": "^2.0.0-beta.3",
