--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-share": "^2.3.1",
     "redux": "^4.0.0"
   },
   "scripts": {
