--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "moment": "^2.22.2",
     "react": "^16.5.1",
+    "react-content-loader": "^3.2.0",
     "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
