--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
+    "filesize": "^3.6.1",
     "moment": "^2.22.2",
     "react": "^16.5.1",
     "react-content-loader": "^3.2.0",
