--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "compression": "^1.7.3",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "http-proxy-middleware": "^0.19.1",
     "mongoose": "^5.2.15",
     "multer": "^1.3.1",
     "multer-s3": "^2.7.0",
