--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "img-share",
+  "name": "snapsapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Sam Okasha",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.317.0",
     "body-parser": "^1.18.3",
