--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.3",
     "http-proxy-middleware": "^0.19.1",
     "mongoose": "^5.2.15",
