--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
+    "helmet": "^3.15.0",
     "http-proxy-middleware": "^0.19.1",
     "mongoose": "^5.2.15",
     "multer": "^1.3.1",
